# unit-forge

./: Cargo.toml  README.md  todo.md
.github/workflows/: release.yml
unit-forge-cli/: Cargo.toml  unit_definitions.toml
unit-forge-cli/src/: main.rs
unit-forge-lib/: Cargo.toml
unit-forge-lib/src/: interceptor.rs  interpretor.rs  lib.rs  parser.rs  unit.rs  unit_table.rs  units.rs
unit_definitions/: basic.ud
