[package]
name = "unit-forge-lib"
version = "0.0.5"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
logos = "0.15.0"
thiserror = "2.0.12"
indexmap = {version = "2.9", features = ["serde"]}
chumsky = {version = "0.10.1", features = ["lexical-numbers"]}

[dev-dependencies]
toml = "0.7"
